--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Tarot Centaura</title>
+    <title>Tarot</title>
 </head>
 <!-- Navbar con logo -->
 <div id="instagram-chat">
@@ -38,9 +38,9 @@
                 </div>
             </header>
             <div data-aos="fade-down" class="info">
-                <h1>TAROT CENTAURA</h1>
+                <h3>TAROT CENTAURA</h3>
                 <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero</h2>
-                <h3>Tarotista Terapeutica</h3>
+                <h1>Servicio De Tarot Terapeutico</h1>
                 
                 
             </div>
@@ -65,9 +65,9 @@
                 </div>
             </header>
             <div data-aos="fade-down" class="info2">
-                <h1>TAROT CENTAURA</h1>
-                <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero </h2>
-                <h3>Tarotista Terapeutica</h3>
+                <h3>TAROT CENTAURA</h3>
+                <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero</h2>
+                <h1>Servicio De Tarot Terapeutico</h1>
             </div>
         </div>
     </section>
@@ -75,7 +75,7 @@
 
     <!--SECCION IMAGEN Y TEXTO-->
 
-    <h1>Haga Click En La Imagen</h1>
+    <h4>Haga Click En La Imagen</h4>
     <section data-aos="fade-up" class="imagen-texto" id="sobremi">
         <div  class="contenedor-imagen-texto">
             <div class="imagenMia">
