--- a/index2/camino.html
+++ b/index2/camino.html
@@ -37,9 +37,9 @@
                 </div>
             </header>
             <div data-aos="fade-down" class="info">
-                <h1>TAROT CENTAURA</h1>
+                <h3>TAROT CENTAURA</h3>
                 <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero</h2>
-                <h3>Tarotista Terapeutica</h3>
+                <h1>Servicio De Tarot Terapeutico</h1>
             </div>
         </div>
     </section>
@@ -62,9 +62,9 @@
                 </div>
             </header>
             <div data-aos="fade-down" class="info2">
-                <h1>TAROT CENTAURA</h1>
-                <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero </h2>
-                <h3>Tarotista Terapeutica</h3>
+                <h3>TAROT CENTAURA</h3>
+                <h2>Tarot, Reiki, Meditacion guiada, Registros Akashicos, Rito Sagrado sanacion del utero</h2>
+                <h1>Servicio De Tarot Terapeutico</h1>
             </div>
         </div>
     </section>
