--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
 
 
     <!--SECCION IMAGEN Y TEXTO-->
-
     <h4>Haga Click En La Imagen</h4>
     <section data-aos="fade-up" class="imagen-texto" id="sobremi">
         <div  class="contenedor-imagen-texto">
@@ -84,7 +83,6 @@
     </section>
 
     <!--SECCION SOBRE MI-->
-
     <section data-aos="fade-up" class="sobremi" id="habilidades">
             <div class="contenido-seccion">
                 <h3 class="titulo-seccion">Mis Servicios</h3>
@@ -152,9 +150,17 @@
             </div>
     </section>
 
-    <!--FORMULARIO-->
+    <!--Video Youtube-->
+    <section data-aos="zoom-in" class="videoTiktok">
+        <div class="video">
+            <div ><blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tarot_centaura/video/7322250994622942470" data-video-id="7322250994622942470" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tarot_centaura" href="https://www.tiktok.com/@tarot_centaura?refer=embed">@tarot_centaura</a> <a title="tarot" target="_blank" href="https://www.tiktok.com/tag/tarot?refer=embed">#tarot</a> <a title="tarotreading" target="_blank" href="https://www.tiktok.com/tag/tarotreading?refer=embed">#tarotreading</a> <a title="mitosyverdades" target="_blank" href="https://www.tiktok.com/tag/mitosyverdades?refer=embed">#mitosyverdades</a> <a title="tarotreader" target="_blank" href="https://www.tiktok.com/tag/tarotreader?refer=embed">#tarotreader</a>  <a title="tarothumor" target="_blank" href="https://www.tiktok.com/tag/tarothumor?refer=embed">#tarothumor</a> <a title="tarotistasdetiktok" target="_blank" href="https://www.tiktok.com/tag/tarotistasdetiktok?refer=embed">#tarotistasdetiktok</a> <a title="viral" target="_blank" href="https://www.tiktok.com/tag/viral?refer=embed">#viral</a> <a title="parati" target="_blank" href="https://www.tiktok.com/tag/parati?refer=embed">#parati</a> <a title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="tarotcentaura" target="_blank" href="https://www.tiktok.com/tag/tarotcentaura?refer=embed">#tarotcentaura</a> <a target="_blank" title="♬ Si puedo y lo he hecho varias veces - ✨ House of Dragas ✨" href="https://www.tiktok.com/music/Si-puedo-y-lo-he-hecho-varias-veces-7257407711074093867?refer=embed">♬ Si puedo y lo he hecho varias veces - ✨ House of Dragas ✨</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+            </div>
+        </div>
+    </section>
 
-    <section data-aos="fade-up" class="formu">
+    <!--FORMULARIO-->
+    <section  data-aos="fade-up"
+    data-aos-duration="3000" class="formu">
         <div id="formulario">
             <form action="https://formsubmit.co/arielschinocca4@gmail.com" method="POST">
                 <label for="name">Nombre</label>
