se modificaron cartas

--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="tarjeta-wrap"><h4>Barra De Access</h4>
+                    <div class="tarjeta">
+                        <div class="adelante card7"></div>
+                        <div class="atras">
+                    <p>La terapia de la Barra de Access es una técnica innovadora que aborda problemas emocionales y traumas mediante movimientos oculares específicos. Durante la sesión, el terapeuta guía al paciente para acceder a recuerdos y emociones almacenadas en el cerebro, lo que puede llevar a una liberación emocional y un mayor bienestar. Esta modalidad ofrece una forma única de abordar y procesar experiencias difíciles, promoviendo el equilibrio emocional y el crecimiento personal</p>
+                        </div>
+                    </div>
+                </div>
             </div>
     </section>
 
