cambio numero telefono

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="hero__container container">
             <h1 class="hero__title">Tarot Terapeutico</h1>
             <p class="hero__paragraph">Bienvenido a nuestro tarot terapéutico, donde unimos la sabiduría del tarot con sanación emocional. Te ofrezco lecturas personalizadas para explorar inquietudes, aclarar decisiones y fomentar el autoconocimiento. Empodérate en tu camino personal y descubre nuevas oportunidades. ¡Unite a este viaje de transformación!.</p>
-            <a href=" https://wa.me/1126975738" class="cta">Solicita tu turno ahora</a>
+            <a href=" https://wa.me/+5491126975738" class="cta">Solicita tu turno ahora</a>
         </section>
     </header>
 
@@ -89,7 +89,7 @@
                 <div class="knowledege__texts">
                     <h2 class="subtitle">El tarot terapéutico ofrece valiosas perspectivas en áreas fundamentales de la vida, como las relaciones amorosas, la estabilidad económica y la búsqueda de significado existencial</h2>
                     <p class="knowledge__paragraph">A través de sus símbolos y arquetipos, el tarot nos invita a reflexionar sobre nuestras experiencias y emociones, facilitando el autoconocimiento y el crecimiento personal. Cada lectura se convierte en una oportunidad para explorar nuestras inquietudes y encontrar un camino más claro hacia el bienestar integral.</p>
-                    <a href=" https://wa.me/1126975738" class="cta">Pedime ahora mismo un turno y descubri la magia</a>
+                    <a href="https://wa.me/+5491126975738" class="cta">Pedime ahora mismo un turno y descubri la magia</a>
                 </div>
 
                 <figure class="knowledge__picture">
@@ -111,7 +111,7 @@
                         <p class="price__features">1 hora por sesion</p>
                     </div>
 
-                    <a href=" https://wa.me/1126975738" class="price__cta">Empieza ahora</a>
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">Empieza ahora</a>
                 </div>
 
 
@@ -124,7 +124,7 @@
                         <p class="price__features">preguntas ilimitadas + 2 seciones de barras de access</p>
                     </div>
 
-                    <a href=" https://wa.me/1126975738" class="price__cta">Empieza ahora</a>
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">Empieza ahora</a>
                 </div>
 
 
@@ -137,7 +137,7 @@
                         <p class="price__features">1 hora</p>
                     </div>
 
-                    <a href=" https://wa.me/1126975738" class="price__cta">Empieza ahora</a>
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">Empieza ahora</a>
                 </div>
 
 
@@ -253,7 +253,7 @@
             <section class="questions__offer">
                 <h2 class="subtitle">¿Estas listo para emprender este camino ?</h2>
                 <p class="questions__copy">La transformación y el autoconocimiento están al alcance de tu mano. Si sientes la llamada de este viaje, te invito a dar el primer paso. Juntos, podemos explorar las oportunidades que te esperan y ayudarte a encontrar el camino que resuena con tu esencia.</p>
-                <a href=" https://wa.me/1126975738" class="cta">Reserva una cita conmigo ahora</a>
+                <a href=" https://wa.me/+5491126975738" class="cta">Reserva una cita conmigo ahora</a>
             </section>
         </section>
     </main>
