cambio detalles footer, telefono

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta name="theme-color" content="#2091F9">
 
-    <meta name="title" content="Aprende CSS desde cero">
+    <meta name="title" content="tarot terapeutico">
     <meta name="description"
         content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
 
@@ -36,10 +36,10 @@
                     <a href="#" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Acerca de mi</a>
+                    <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">Acerca de mi</a>
                 </li>
                 <li class="nav__items">
-                    <a href=" https://wa.me/1126975738" class="nav__links">Contacto</a>
+                    <a href=" https://wa.me/+5491126975738" class="nav__links">Contacto</a>
                 </li>
 
 
@@ -268,21 +268,19 @@
                         <a href="#" class="nav__links">Inicio</a>
                     </li>
                     <li class="nav__items">
-                        <a href=" https://wa.me/1126975738" class="nav__links">Contacto</a>
+                        <a href=" https://wa.me/+5491126975738" class="nav__links">Contacto</a>
                     </li>
                     <li class="nav__items">
-                        <a href="#" class="nav__links">Redes Sociales</a>
+                        <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">Redes Sociales</a>
                     </li>
                 </ul>
             </nav>
 
-            <form class="footer__form" action="https://formspree.io/f/xjvnbnwg" method="POST">
-                <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
-                <div class="footer__inputs">
-                    <input type="email" placeholder="Email:" class="footer__input" name="_replyto">
-                    <input type="submit" value="Registrate" class="footer__submit">
-                </div>
-            </form>
+            <section class="questions__offer">
+                <a href=" https://wa.me/+5491126975738" class="cta2">Reserva una cita!
+                </a>
+            </section>
+
         </section>
 
         <section class="footer__copy container">
