--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <a href="https://www.instagram.com/tarot_centaura/" class="footer__icons"><img src="./images/instagram.svg" class="footer__img"></a>
             </div>
 
-            <h3 class="footer__copyright">Derechos reservados &copy; Celeste Navarro</h3>
+            <h3 class="footer__copyright">Derechos reservados &copy; Ariel Schinocca</h3>
         </section>
     </footer>
 
