--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta name="title" content="tarot terapeutico">
     <meta name="description"
-        content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
+        content="Tarot.">
 
 
     <meta property="og:type" content="website">
