--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="./images/fototarjeta2.png" class="knowledge__img">
+                    <img src="./images/DSC_0720.jpg" class="knowledge__img">
                 </figure>
             </div>
         </section>
