se realizaron cambios

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tarot Terapéutico, Barras de Access y Sanación | Centaura</title>
+    <meta name="description" content="Descubre el tarot terapéutico, las Barras de Access y técnicas de sanación energética para conectar contigo mismo y transformar tu vida.">
+    <meta name="keywords" content="tarot terapéutico, barras de Access, yoga terapéutico, sanación energética, autoconocimiento, bienestar emocional">
+    <link rel="canonical" href="https://www.tarotcentaura.com">
+
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarot Centaura</title>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/estilos.css">
@@ -28,7 +34,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
-                <h2 class="nav__title">Tarot Centaura</h2>
+                <h1 class="nav__title">Tarot Terapeutico</h1>
             </div>
 
             <ul class="nav__link nav__link--menu">
@@ -52,7 +58,7 @@
         </nav>
 
         <section class="hero__container container">
-            <h1 class="hero__title">Tarot Terapeutico</h1>
+            <h2 class="hero__title">Tarot Centaura</h2>
             <p class="hero__paragraph">Bienvenido a nuestro tarot terapéutico, donde unimos la sabiduría del tarot con sanación emocional. Te ofrezco lecturas personalizadas para explorar inquietudes, aclarar decisiones y fomentar el autoconocimiento. Empodérate en tu camino personal y descubre nuevas oportunidades. ¡Unite a este viaje de transformación!.</p>
             <a href=" https://wa.me/+5491126975738" class="cta">Solicita tu turno ahora</a>
         </section>
@@ -157,7 +163,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/consultante4.jpeg" class="testimony__img">
+                        <img src="./images/consultante4.jpeg" alt="Lectura de tarot terapéutico en línea para sanación emocional"  class="testimony__img">
                     </figure>
                 </section>
 
