se cambio imagen

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarot Terapéutico, Barras de Access y Sanación | Centaura</title>
-    <meta name="description" content="Descubre el tarot terapéutico, las Barras de Access y técnicas de sanación energética para conectar contigo mismo y transformar tu vida.">
+    <meta name="description" content="Lecturas de tarot terapéutico para sanación emocional y barras de Access, acompañándote en tu camino de autoconocimiento">
     <meta name="keywords" content="tarot terapéutico, barras de Access, yoga terapéutico, sanación energética, autoconocimiento, bienestar emocional">
     <link rel="canonical" href="https://www.tarotcentaura.com">
 
@@ -24,7 +24,7 @@
 
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Tarot">
+    <meta property="og:title" content="Centaura: Tarot terapéutico y barras de Access para tu bienestar emocional">
     <meta property="og:description">
     <meta property="twitter:title" content="Tarot Centaura">
 </head>
