se cambio imagen2

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="preload" href="images/fantasy-astral-wallpaper-composition.jpg" as="image">
+
 
     <meta name="theme-color" content="#2091F9">
 
     <meta name="title" content="tarot terapeutico">
     <meta name="description"
-        content="Tarot.">
+        content="Tarot Terapeutico.">
 
 
     <meta property="og:type" content="website">
