--- a/index.html
+++ b/index.html
@@ -107,45 +107,45 @@
         </section>
 
         <section class="price container">
-            <h2 class="subtitle">Obten el plan perfecto para vos</h2>
+            <h2 class="subtitle">PROXIMAMENTE</h2>
 
             <div class="price__table">
                 <div class="price__element">
-                    <p class="price__name">Promo1</p>
+                    <p class="price__name"></p>
                     <h3 class="price__price">Tarot Terapeutico</h3>
 
                     <div class="price__items">
-                        <p class="price__features">Preguntas ilimitadas</p>
-                        <p class="price__features">1 hora por sesion</p>
+                        <p class="price__features">Clases grabadas y en vivo</p>
+                        <p class="price__features">En mis cursos de Tarot Terapéutico, aprenderás a usar las cartas para el autoconocimiento y la sanación, guiándote hacia el bienestar y la claridad interior.</p>
                     </div>
 
-                    <a href=" https://wa.me/+5491126975738" class="price__cta">Empieza ahora</a>
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">Pedime mas informacion</a>
                 </div>
 
 
                 <div class="price__element price__element--best">
-                    <p class="price__name">Promo2</p>
-                    <h3 class="price__price">Tarot terapeutico + Barra de access </h3>
+                    <p class="price__name"></p>
+                    <h3 class="price__price">Centro de yoga</h3>
 
                     <div class="price__items">
-                        <p class="price__features">1 hora de tarot 5 dias a la semana</p>
-                        <p class="price__features">preguntas ilimitadas + 2 seciones de barras de access</p>
+                        <p class="price__features">Clases en vivo, presencial y virtual</p>
+                        <p class="price__features">Únete a mis clases de yoga, adaptadas a todos los niveles. Ofreceré prácticas que van desde la relajación hasta el fortalecimiento físico y mental, enfocadas en el equilibrio, la respiración y el bienestar personal</p>
                     </div>
 
-                    <a href=" https://wa.me/+5491126975738" class="price__cta">Empieza ahora</a>
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">Hablame y te cuento mas</a>
                 </div>
 
 
                 <div class="price__element">
-                    <p class="price__name">Promo3</p>
-                    <h3 class="price__price">barra de access</h3>
+                    <p class="price__name"></p>
+                    <h3 class="price__price">Barra de access</h3>
 
                     <div class="price__items">
-                        <p class="price__features">2 sesiones de barra de access mensuales</p>
-                        <p class="price__features">1 hora</p>
+                        <p class="price__features">4 sesiones presenciales</p>
+                        <p class="price__features">Las sesiones de Barras de Access son una herramienta poderosa para liberar bloqueos energéticos y mentales, promoviendo el bienestar y la transformación personal.</p>
                     </div>
 
-                    <a href=" https://wa.me/+5491126975738" class="price__cta">Empieza ahora</a>
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">No dudes en consultar</a>
                 </div>
 
 
