se restructuro la pagina

--- a/index.html
+++ b/index.html
@@ -67,9 +67,27 @@
     </header>
 
     <main>
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledege__texts">
+                    <h2 class="subtitle">Mi nombre es Celeste, soy tarologa y terapeuta de Barra de Access y practicante de otras disciplinas de sanación como Reiki y meditación.</h2>
+                    <p class="knowledge__paragraph"> A través de herramientas como el Tarot, las Barras de Access, el Reiki y la meditación, encontré claridad, sanación y un propósito que le dio sentido a mi vida.
+                        Hoy, mi misión es compartir estas herramientas y experiencias con otras personas que estén buscando un camino hacia la transformación. 
+                        En mis sesiones de Tarot, no solo ofrezco orientación, sino también un espacio seguro para conectar con el poder personal de cada uno.. (ese con el que TODOS nacemos)
+                         Las terapias que brindo están diseñadas para ayudar a liberar bloqueos, ganar confianza y recordar que, incluso en los momentos más oscuros, es posible renacer!</p>
+                    <a href="https://wa.me/+5491126975738" class="cta">Pedime ahora mismo un turno y descubri la magia</a>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img src="./images/DSC_0720.jpg" class="knowledge__img">
+                </figure>
+            </div>
+        </section>
+
         <section class="container about">
             <h2 class="subtitle">¿Queres saber mas sobre el tarot y sus beneficios?</h2>
-            <p class="about__paragraph">En este espacio te voy a brindar las claves para poder sacar el maximo provecho a al tarot terapeutico</p>
+            <p class="about__paragraph">En este espacio te voy a brindar las claves para poder sacar el maximo provecho az al tarot terapeutico</p>
 
             <div class="about__main">
                 <article class="about__icons">
@@ -89,66 +107,6 @@
                     <h3 class="about__title">Consejos para tu lectura</h3>
                     <p class="about__paragrah">Mantén una mente abierta y dispuesta a recibir lo que el tarot tiene para ofrecer. Reflexiona sobre tus emociones y experiencias previas para aprovechar al máximo cada lectura.</p>
                 </article>
-            </div>
-        </section>
-
-        <section class="knowledge">
-            <div class="knowledge__container container">
-                <div class="knowledege__texts">
-                    <h2 class="subtitle">El tarot terapéutico ofrece valiosas perspectivas en áreas fundamentales de la vida, como las relaciones amorosas, la estabilidad económica y la búsqueda de significado existencial</h2>
-                    <p class="knowledge__paragraph">A través de sus símbolos y arquetipos, el tarot nos invita a reflexionar sobre nuestras experiencias y emociones, facilitando el autoconocimiento y el crecimiento personal. Cada lectura se convierte en una oportunidad para explorar nuestras inquietudes y encontrar un camino más claro hacia el bienestar integral.</p>
-                    <a href="https://wa.me/+5491126975738" class="cta">Pedime ahora mismo un turno y descubri la magia</a>
-                </div>
-
-                <figure class="knowledge__picture">
-                    <img src="./images/DSC_0720.jpg" class="knowledge__img">
-                </figure>
-            </div>
-        </section>
-
-        <section class="price container">
-            <h2 class="subtitle">PROXIMAMENTE</h2>
-
-            <div class="price__table">
-                <div class="price__element">
-                    <p class="price__name"></p>
-                    <h3 class="price__price">Tarot Terapeutico</h3>
-
-                    <div class="price__items">
-                        <p class="price__features">Clases grabadas y en vivo</p>
-                        <p class="price__features">En mis cursos de Tarot Terapéutico, aprenderás a usar las cartas para el autoconocimiento y la sanación, guiándote hacia el bienestar y la claridad interior.</p>
-                    </div>
-
-                    <a href=" https://wa.me/+5491126975738" class="price__cta">Pedime mas informacion</a>
-                </div>
-
-
-                <div class="price__element price__element--best">
-                    <p class="price__name"></p>
-                    <h3 class="price__price">Centro de yoga</h3>
-
-                    <div class="price__items">
-                        <p class="price__features">Clases en vivo, presencial y virtual</p>
-                        <p class="price__features">Únete a mis clases de yoga, adaptadas a todos los niveles. Ofreceré prácticas que van desde la relajación hasta el fortalecimiento físico y mental, enfocadas en el equilibrio, la respiración y el bienestar personal</p>
-                    </div>
-
-                    <a href=" https://wa.me/+5491126975738" class="price__cta">Hablame y te cuento mas</a>
-                </div>
-
-
-                <div class="price__element">
-                    <p class="price__name"></p>
-                    <h3 class="price__price">Barra de access</h3>
-
-                    <div class="price__items">
-                        <p class="price__features">4 sesiones presenciales</p>
-                        <p class="price__features">Las sesiones de Barras de Access son una herramienta poderosa para liberar bloqueos energéticos y mentales, promoviendo el bienestar y la transformación personal.</p>
-                    </div>
-
-                    <a href=" https://wa.me/+5491126975738" class="price__cta">No dudes en consultar</a>
-                </div>
-
-
             </div>
         </section>
 
@@ -213,6 +171,52 @@
 
 
                 <img src="./images/flecha-der.svg" class="testimony__arrow" id="next">
+            </div>
+        </section>
+
+        <section class="price container">
+            <h2 class="subtitle">PROXIMAMENTE</h2>
+
+            <div class="price__table">
+                <div class="price__element">
+                    <p class="price__name"></p>
+                    <h3 class="price__price">Tarot Terapeutico</h3>
+
+                    <div class="price__items">
+                        <p class="price__features">Clases grabadas y en vivo</p>
+                        <p class="price__features">En mis cursos de Tarot Terapéutico, aprenderás a usar las cartas para el autoconocimiento y la sanación, guiándote hacia el bienestar y la claridad interior.</p>
+                    </div>
+
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">Pedime mas informacion</a>
+                </div>
+
+
+                <div class="price__element price__element--best">
+                    <p class="price__name"></p>
+                    <h3 class="price__price">Centro de yoga</h3>
+
+                    <div class="price__items">
+                        <p class="price__features">Clases en vivo, presencial y virtual</p>
+                        <p class="price__features">Únete a mis clases de yoga, adaptadas a todos los niveles. Ofreceré prácticas que van desde la relajación hasta el fortalecimiento físico y mental, enfocadas en el equilibrio, la respiración y el bienestar personal</p>
+                    </div>
+
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">Hablame y te cuento mas</a>
+                </div>
+
+
+                <div class="price__element">
+                    <p class="price__name"></p>
+                    <h3 class="price__price">Barra de access</h3>
+
+                    <div class="price__items">
+                        <p class="price__features">4 sesiones presenciales</p>
+                        <p class="price__features">Las sesiones de Barras de Access son una herramienta poderosa para liberar bloqueos energéticos y mentales, promoviendo el bienestar y la transformación personal.</p>
+                    </div>
+
+                    <a href=" https://wa.me/+5491126975738" class="price__cta">No dudes en consultar</a>
+                </div>
+
+
             </div>
         </section>
 
