se cambio fto de fondo

--- a/index.html
+++ b/index.html
@@ -86,26 +86,26 @@
         </section>
 
         <section class="container about">
-            <h2 class="subtitle">¿Queres saber mas sobre el tarot y sus beneficios?</h2>
-            <p class="about__paragraph">En este espacio te voy a brindar las claves para poder sacar el maximo provecho az al tarot terapeutico</p>
+            <h2 class="subtitle">Diferencias entre Tarot Predictivo y Tarot Terapeutico</h2>
+            <p class="about__paragraph">El Tarot Predictivo y el Tarot Terapéutico son dos enfoques diferentes, pero ambos tienen el poder de ayudarte a comprender mejor tu vida. Sin embargo, se enfocan en aspectos distintos de tu camino.</p>
 
             <div class="about__main">
                 <article class="about__icons">
-                    <img src="./images/check.svg" class="about__icon">
-                    <h3 class="about__title">Que preguntar?</h3>
-                    <p class="about__paragrah">Preguntas sobre tu vida emocional, relaciones o decisiones importantes son ideales. El tarot puede ofrecerte una nueva perspectiva y ayudarte a clarificar tus pensamientos.</p>
+                    <img src="./images/tarot-card-2-svgrepo-com.svg" class="about__icon">
+                    <h3 class="about__title">Tarot Terapéutico</h3>
+                    <p class="about__paragrah">El Tarot Terapéutico, en cambio, se enfoca en tu bienestar emocional y espiritual en el presente. Aquí, las cartas no solo hablan del futuro, sino de lo que está sucediendo en tu interior ahora mismo. Este tipo de tarot te ayuda a comprender las raíces de tus bloqueos emocionales, miedos o patrones que te limitan. Es una herramienta para el autoconocimiento, el sanamiento de heridas del pasado y la liberación de lo que ya no te sirve. Su objetivo es brindarte paz interior y fortalecer tu conexión contigo mismo.</p>
                 </article>
 
                 <article class="about__icons">
-                    <img src="./images/no-ok.svg" class="about__icon">
-                    <h3 class="about__title">Que NO preguntar</h3>
-                    <p class="about__paragrah">Evita preguntas sobre temas de salud, finanzas o eventos específicos. El tarot no sustituye el consejo profesional y se centra en ofrecerte guía y reflexión, no respuestas absolutas.</p>
+                    <img src="./images/six-of-cups-svgrepo-com.svg" class="about__icon">
+                    <h3 class="about__title">Tarot Predictivo</h3>
+                    <p class="about__paragrah">El Tarot Predictivo está diseñado para ofrecerte una visión de lo que puede suceder en el futuro. Si tienes dudas sobre una decisión importante o deseas saber cómo podría desarrollarse una situación, este tipo de tarot puede proporcionarte una guía de lo que está por venir. Es como tener un mapa del futuro, ayudándote a tomar decisiones con base en las tendencias que se muestran en las cartas. Este enfoque es ideal cuando necesitas claridad sobre posibles resultados y quieres ver qué direcciones pueden abrirse ante ti.</p>
                 </article>
 
                 <article class="about__icons">
                     <img src="./images/lampara.svg" class="about__icon">
-                    <h3 class="about__title">Consejos para tu lectura</h3>
-                    <p class="about__paragrah">Mantén una mente abierta y dispuesta a recibir lo que el tarot tiene para ofrecer. Reflexiona sobre tus emociones y experiencias previas para aprovechar al máximo cada lectura.</p>
+                    <h3 class="about__title">Conclusión</h3>
+                    <p class="about__paragrah">Ambos enfoques tienen su valor, pero mi enfoque principal es el Tarot Terapéutico. Creo que la verdadera transformación viene desde adentro, sanando lo que nos limita y abriendo espacio para el crecimiento personal. A través de este enfoque, te ayudo a liberarte de cargas emocionales y a encontrar la paz que te permite avanzar con claridad y confianza.</p>
                 </article>
             </div>
         </section>
