se agrego video

--- a/index.html
+++ b/index.html
@@ -110,6 +110,64 @@
             </div>
         </section>
 
+        <section class="video-diferencias">
+            <div class="video-container">
+                <article class="article-video">
+                    <video width="450"src="./videos/Video-deferencias-tarot.mp4" controls autoplay>
+                    </video>
+                </article>
+            </div>
+        </section>
+
+        <section class="questions container">
+            <h2 class="subtitle">Preguntas frecuentes</h2>
+            <p class="questions__paragraph">Aquí encontrarás respuestas a las preguntas más comunes sobre el tarot terapéutico. Nuestro objetivo es ofrecerte claridad y confianza en este camino de autoconocimiento.</p>
+
+            <section class="questions__container">
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Qué es el tarot terapéutico?
+                            <span class="questions__arrow">
+                                <img src="./images/click2.svg" class="questions__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">El tarot terapéutico es una herramienta de autoconocimiento que combina la sabiduría del tarot con un enfoque emocional. A través de las cartas, podemos explorar tus inquietudes y ofrecerte nuevas perspectivas sobre tus desafíos y oportunidades.</p>
+                    </div>
+                </article>
+
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Cómo puedo prepararme para una lectura?
+                            <span class="questions__arrow">
+                                <img src="./images/click2.svg" class="questions__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">Para aprovechar al máximo tu lectura, te sugerimos que te tomes un momento para reflexionar sobre tus preguntas y emociones. Mantén una mente abierta y dispuesta a recibir lo que el tarot tiene para ofrecerte. Esto enriquecerá tu experiencia y facilitará el proceso de autodescubrimiento.</p>
+                    </div>
+                </article>
+
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Qué temas puedo abordar en una lectura?
+                            <span class="questions__arrow">
+                                <img src="./images/click2.svg" class="questions__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">Puedes explorar una amplia gama de temas, incluyendo relaciones personales, desafíos profesionales y la búsqueda de significado en tu vida. El tarot puede ofrecerte orientación y claridad en momentos de incertidumbre, ayudándote a tomar decisiones alineadas con tu verdadero yo.</p>
+                    </div>
+                </article>
+            </section>
+
+            <section class="questions__offer">
+                <h2 class="subtitle">¿Estas listo para emprender este camino ?</h2>
+                <p class="questions__copy">La transformación y el autoconocimiento están al alcance de tu mano. Si sientes la llamada de este viaje, te invito a dar el primer paso. Juntos, podemos explorar las oportunidades que te esperan y ayudarte a encontrar el camino que resuena con tu esencia.</p>
+                <a href=" https://wa.me/+5491126975738" class="cta">Reserva una cita conmigo ahora</a>
+            </section>
+        </section>
+
         <section class="testimony">
             <div class="testimony__container container">
                 <img src="./images/flecha-izq.svg" class="testimony__arrow" id="before">
@@ -172,55 +230,6 @@
 
                 <img src="./images/flecha-der.svg" class="testimony__arrow" id="next">
             </div>
-        </section>
-
-        <section class="questions container">
-            <h2 class="subtitle">Preguntas frecuentes</h2>
-            <p class="questions__paragraph">Aquí encontrarás respuestas a las preguntas más comunes sobre el tarot terapéutico. Nuestro objetivo es ofrecerte claridad y confianza en este camino de autoconocimiento.</p>
-
-            <section class="questions__container">
-                <article class="questions__padding">
-                    <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué es el tarot terapéutico?
-                            <span class="questions__arrow">
-                                <img src="./images/click2.svg" class="questions__img">
-                            </span>
-                        </h3>
-
-                        <p class="questions__show">El tarot terapéutico es una herramienta de autoconocimiento que combina la sabiduría del tarot con un enfoque emocional. A través de las cartas, podemos explorar tus inquietudes y ofrecerte nuevas perspectivas sobre tus desafíos y oportunidades.</p>
-                    </div>
-                </article>
-
-                <article class="questions__padding">
-                    <div class="questions__answer">
-                        <h3 class="questions__title">¿Cómo puedo prepararme para una lectura?
-                            <span class="questions__arrow">
-                                <img src="./images/click2.svg" class="questions__img">
-                            </span>
-                        </h3>
-
-                        <p class="questions__show">Para aprovechar al máximo tu lectura, te sugerimos que te tomes un momento para reflexionar sobre tus preguntas y emociones. Mantén una mente abierta y dispuesta a recibir lo que el tarot tiene para ofrecerte. Esto enriquecerá tu experiencia y facilitará el proceso de autodescubrimiento.</p>
-                    </div>
-                </article>
-
-                <article class="questions__padding">
-                    <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué temas puedo abordar en una lectura?
-                            <span class="questions__arrow">
-                                <img src="./images/click2.svg" class="questions__img">
-                            </span>
-                        </h3>
-
-                        <p class="questions__show">Puedes explorar una amplia gama de temas, incluyendo relaciones personales, desafíos profesionales y la búsqueda de significado en tu vida. El tarot puede ofrecerte orientación y claridad en momentos de incertidumbre, ayudándote a tomar decisiones alineadas con tu verdadero yo.</p>
-                    </div>
-                </article>
-            </section>
-
-            <section class="questions__offer">
-                <h2 class="subtitle">¿Estas listo para emprender este camino ?</h2>
-                <p class="questions__copy">La transformación y el autoconocimiento están al alcance de tu mano. Si sientes la llamada de este viaje, te invito a dar el primer paso. Juntos, podemos explorar las oportunidades que te esperan y ayudarte a encontrar el camino que resuena con tu esencia.</p>
-                <a href=" https://wa.me/+5491126975738" class="cta">Reserva una cita conmigo ahora</a>
-            </section>
         </section>
 
         <section class="price container">
