se modifico tamaño del video

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section class="video-diferencias">
             <div class="video-container">
                 <article class="article-video">
-                    <video class="video" width="450"src="./videos/Video-deferencias-tarot.mp4" controls autoplay>
+                    <video class="video" src="./videos/Video-deferencias-tarot.mp4" controls autoplay>
                     </video>
                 </article>
             </div>
